--- a/MitosisTimesheet/pom.xml
+++ b/MitosisTimesheet/pom.xml
@@ -189,6 +189,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
+		<dependency>
+		<groupId>net.sf.jasperreports</groupId>
+		<artifactId>jasperreports</artifactId>
+		<version>4.0.1</version>
+		</dependency>
 
 	</dependencies>
 </project>
