--- a/MitosisTimesheet/.project
+++ b/MitosisTimesheet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MitosisTimesheet</name>
+	<name>jasper-report</name>
 	<comment></comment>
 	<projects>
 	</projects>
