--- a/MitosisTimesheet/pom.xml
+++ b/MitosisTimesheet/pom.xml
@@ -194,6 +194,35 @@
 		<artifactId>jasperreports</artifactId>
 		<version>4.0.1</version>
 		</dependency>
-
+  
+  <dependency>  
+   <groupId>org.springframework</groupId>  
+   <artifactId>spring-context-support</artifactId>  
+   <version>3.2.3.RELEASE</version>  
+  </dependency>  
+  
+  <dependency>  
+   <groupId>org.springframework</groupId>  
+   <artifactId>spring-tx</artifactId>  
+   <version>3.2.3.RELEASE</version>  
+  </dependency>  
+  
+  
+  <!-- Quartz framework dependencies -->  
+  <dependency>  
+   <groupId>org.quartz-scheduler</groupId>  
+   <artifactId>quartz</artifactId>  
+   <version>2.2.0</version>  
+  </dependency>  
+<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+</dependency>
+<dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <version>1.6.1</version>
+</dependency>
 	</dependencies>
 </project>
